force-app/main/default/objects/Tax_Invoice__c/Tax_Invoice__c.object-meta.xml
<CustomObject>
    <label>Tax Invoice</label>
    <nameField>
        <displayFormat>ENC/25-26/{000000}</displayFormat>
        <label>Tax Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>