force-app/main/default/objects/Tax_Invoice__c/fields/Acknowledgement_Number__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Number__c</fullName>
    <label>Acknowledgement Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>