force-app/main/default/objects/Tax_Invoice__c/fields/ClearTax_response_json__c.field-meta.xml
<CustomField>
    <fullName>ClearTax_response_json__c</fullName>
    <label>ClearTax response json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>