force-app/main/default/objects/Tax_Invoice__c/fields/ClearTax_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>ClearTax_Retry_Count__c</fullName>
    <label>ClearTax Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>