force-app/main/default/objects/Tax_Invoice__c/fields/Document_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Status__c</fullName>
    <label>Document Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IRN_GENERATED</fullName>
            </value>
            <value>
                <fullName>IRN_CANCELLED</fullName>
            </value>
            <value>
                <fullName>NOT_CREATED</fullName>
            </value>
            <value>
                <fullName>DOCUMENT_VALIDATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>