force-app/main/default/objects/Tax_Invoice__c/fields/EWB_Date__c.field-meta.xml
<CustomField>
    <fullName>EWB_Date__c</fullName>
    <label>EWB Date</label>
    <type>DateTime</type>
</CustomField>