force-app/main/default/objects/Tax_Invoice__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <formula>Opportunity__r.Account.GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSTIN</label>
    <type>Text</type>
</CustomField>