force-app/main/default/objects/Tax_Invoice__c/fields/IRN__c.field-meta.xml
<CustomField>
    <fullName>IRN__c</fullName>
    <label>IRN</label>
    <length>64</length>
    <type>Text</type>
</CustomField>