force-app/main/default/objects/Tax_Invoice__c/fields/Oracle_request_json__c.field-meta.xml
<CustomField>
    <fullName>Oracle_request_json__c</fullName>
    <label>Oracle request json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>