force-app/main/default/objects/Tax_Invoice__c/fields/Oracle_Status__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Status__c</fullName>
    <label>Oracle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>