force-app/main/default/objects/Tax_Invoice__c/fields/Sent_to_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Oracle</label>
    <type>Checkbox</type>
</CustomField>