force-app/main/default/objects/Tax_Invoice__c/fields/Signed_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Signed_Invoice__c</fullName>
    <label>Signed Invoice</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>